student page of home done

--- a/src/view/student/s_index.html
+++ b/src/view/student/s_index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header id="s_header" class="s-header">
-    <h1 class="s-h-logo left">
+    <!-- <h1 class="s-h-logo left">
       <a href="#"><img src="../../asset/image/logo.png" alt="logo" title="哈工大出版社在线教育" /></a>
     </h1>
     <div class="s-h-info right">
@@ -54,7 +54,7 @@
       <div class="s-input">
         <input type="search"><span class="search-logo"></span>
       </div>
-    </div>
+    </div> -->
 
   </header>
   <nav id="s_nav" class="s-nav">
