page of course of student is coding

--- a/src/view/student/s_index.html
+++ b/src/view/student/s_index.html
@@ -67,7 +67,7 @@
       <div class="nav-left left">
         <ul>
           <li id="n_home"><a class="color" href="">首页</a></li>
-          <li id="n_course"><a href="http://localhost:38900/view/student/s_course.html">课程</a></li>
+          <li id="n_course"><a href="/view/student/s_course.html">课程</a></li>
           <li id="n_textbook"><a href="">教材</a></li>
           <li class="margin"> | </li>
           <li id="n_study"><a href="">我的学习</a></li>
@@ -208,6 +208,7 @@
       <li>京IC备11017824号-7</li>
     </ul>
   </footer>
+  
   <script src="../../lib/require.js" data-main="../../js/Controller/student/s_index.js"></script>
 
 </body>
