--- a/src/view/student/s_course.html
+++ b/src/view/student/s_course.html
@@ -94,7 +94,7 @@
         <div class="content_main">
           <ul>
             <li>
-              <a href="http://localhost:39900/view/student/s_course_detail.html">
+              <a href="/view/student/s_course_detail.html">
                 <img src="../../asset/image/s_index_push_2.png" alt="">
                 <p>课程名称</p>
               </a>
