--- a/src/view/student/s_course.html
+++ b/src/view/student/s_course.html
@@ -46,7 +46,7 @@
     </p>
     <div class="s-c-wrap">
       <div class="s-c-item">
-        <ul class="accordion">
+        <!-- <ul class="accordion">
           <li>
             <button class="accordion-control">哲学</button><span>+</span>
 
@@ -81,7 +81,7 @@
               <li class="notone">教材二级分类</li>
             </ul>
           </li>
-        </ul>
+        </ul> -->
 
       </div>
       <div class="s-c-content">
@@ -258,11 +258,6 @@
         <li>京IC备11017824号-7</li>
       </ul>
     </footer>
-    <script>
-        window.onload = function(){
-          console.log('xiongwencheng');
-        }
-      </script>
   <script src="../../lib/require.js" data-main="../../js/Controller/student/s_course.js"></script>
 
 </body>
