--- a/src/view/student/s_course_detail.html
+++ b/src/view/student/s_course_detail.html
@@ -22,8 +22,8 @@
     <div class="nav-wrap">
       <div class="nav-left left">
         <ul>
-          <li id="n_home"><a class="color" href="/view/student/s_home.html">首页</a></li>
-          <li id="n_course"><a href="/view/student/s_course.html">课程</a></li>
+          <li id="n_home"><a  href="/view/student/s_home.html">首页</a></li>
+          <li id="n_course"><a class="color" href="/view/student/s_course.html">课程</a></li>
           <li id="n_textbook"><a href="/view/student/s_textbook.html">教材</a></li>
           <li class="margin"> | </li>
           <li id="n_study"><a href="/view/student/s_study.html">我的学习</a></li>
