--- a/src/view/student/s_index.html
+++ b/src/view/student/s_index.html
@@ -12,50 +12,7 @@
 
 <body>
   <header id="s_header" class="s-header">
-    <!-- <h1 class="s-h-logo left">
-      <a href="#"><img src="../../asset/image/logo.png" alt="logo" title="哈工大出版社在线教育" /></a>
-    </h1>
-    <div class="s-h-info right">
-      <ul class="user-list">
-        <li class="wrap">
-          <a href="" class="mes">
-            <span class="mes-num">1</span>
-          </a>
-        </li>
-        <li class="wrap">
-          <a href="" class="avater">
-            <img src="../../asset/image/avater.jpeg" class="avater" alt="" title="">
-          </a>
-          <a href="#">王菲<i class="triangle-down icon"></i></a>
-          <ul>
-            <li>我的资源</li>
-            <li class="giveout">我的订单</li>
-            <li class="giveout">个人资料</li>
-            <li class="giveout"><a href="http://localhost:38900/login.html">退出登录</a></li>
-          </ul>
-        </li>
-        <li class="wrap">
-          <a href="#">学生端<i class="triangle-down icon"></i></a>
-          <ul>
-            <li>学生端</li>
-            <li class="giveout">教师端</li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <div class="s-h-search">
-      <div class="s-select">
-        <a href="#">课程<i class="triangle-down-black icon"></i></a>
-        <ul>
-          <li>课程</li>
-          <li class="giveout">教材</li>
-        </ul>
-      </div>
-      <div class="s-input">
-        <input type="search"><span class="search-logo"></span>
-      </div>
-    </div> -->
-
+    <!-- add pattern -->
   </header>
   <nav id="s_nav" class="s-nav">
     <!-- --------- -->
@@ -102,49 +59,8 @@
       </div>
       <a href="#" class="right">more...</a>
     </div>
-    <div class="s-c-content">
-      <ul>
-        <li>
-          <img src="../../asset/image/s_index_push_10.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_6.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_9.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_8.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_1.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_7.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_5.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_4.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_3.png" alt="">
-          <p>课程名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_2.png" alt="">
-          <p>课程名称</p>
-        </li>
-      </ul>
+    <div class="s-c-content" id="courseList">
+
     </div>
   </section>
 
@@ -157,48 +73,8 @@
       <a href="#" class="right">more...</a>
     </div>
     <div class="s-t-content">
-      <ul>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-        <li>
-          <img src="../../asset/image/s_index_push_11.png" alt="">
-          <p>教材名称</p>
-        </li>
-      </ul>
+    
+    </div>
   </section>
   <footer id="s_footer" class="s-footer">
     <ul>
@@ -208,7 +84,49 @@
       <li>京IC备11017824号-7</li>
     </ul>
   </footer>
-  
+    <!-- <ul id="courseList"> -->
+        <!-- <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li>
+        <li>
+          <img src="http://dummyimage.com/185x160" alt="">
+          <p>课程名称</p>
+        </li> -->
+      <!-- </ul> -->
+
   <script src="../../lib/require.js" data-main="../../js/Controller/student/s_index.js"></script>
 
 </body>
