--- a/src/view/student/s_course.html
+++ b/src/view/student/s_course.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../../lib/simplePagination.css">
   <link rel="stylesheet" href="../../style/main.css">
   <title>Document</title>
 </head>
@@ -42,47 +43,11 @@
   <section id="s_c_content">
     <p class="s_top_p">
       <span class="s_span">首页</span><span>></span><span class="s_span">课程</span><span>></span><a
-        href="">一级分类名称</a><span>></span><a href="">二级分类名称</a>
+        href="#" class="course-nav"></a>
+        <!-- <span>></span><a href="">二级分类名称</a> -->
     </p>
     <div class="s-c-wrap">
       <div class="s-c-item">
-        <!-- <ul class="accordion">
-          <li>
-            <button class="accordion-control">哲学</button><span>+</span>
-
-            <ul class="accordion-panel">
-              <li>中国哲学</li>
-              <li class="notone">西方哲学</li>
-            </ul>
-
-          </li>
-          <li>
-            <button class="accordion-control">教材一级分类</button><span>+</span>
-
-            <ul class="accordion-panel">
-              <li>教材二级分类</li>
-              <li class="notone">教材二级分类</li>
-              <li class="notone">教材二级分类</li>
-            </ul>
-          </li>
-          <li>
-            <button class="accordion-control">教材一级分类</button><span>+</span>
-            <ul class="accordion-panel">
-              <li>教材二级分类</li>
-              <li class="notone">教材二级分类</li>
-              <li class="notone">教材二级分类</li>
-            </ul>
-          </li>
-          <li>
-            <button class="accordion-control">教材一级分类</button><span>+</span>
-            <ul class="accordion-panel">
-              <li>教材二级分类</li>
-              <li class="notone">教材二级分类</li>
-              <li class="notone">教材二级分类</li>
-            </ul>
-          </li>
-        </ul> -->
-
       </div>
       <div class="s-c-content">
         <div class="content_top">
@@ -92,149 +57,7 @@
             </span><span class="top_span spantwo">></span></div>
         </div>
         <div class="content_main">
-          <ul>
-            <li>
-              <a href="/view/student/s_course_detail.html">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-            <li>
-              <a href="">
-                <img src="../../asset/image/s_index_push_2.png" alt="">
-                <p>课程名称</p>
-              </a>
-              <span>作者</span><span>大学名称</span>
-            </li>
-
-          </ul>
+          <!-- 添加组件 -->
         </div>
         <div class="content_footer">
           <!-- <div class="footer_left">共<span>100</span>个课程</div>
@@ -243,7 +66,9 @@
             <div class="total-module">
               共<span class="total-module-num">100</span>个课程
             </div>
-            <div class="pagination"></div>
+            <div class="pagination">
+              
+            </div>
           </div>
         </div>
       </div>
