--- a/src/view/student/s_index.html
+++ b/src/view/student/s_index.html
@@ -25,9 +25,9 @@
         <ul>
           <li id="n_home"><a class="color" href="">首页</a></li>
           <li id="n_course"><a href="/view/student/s_course.html">课程</a></li>
-          <li id="n_textbook"><a href="">教材</a></li>
+          <li id="n_textbook"><a href="/view/student/s_textbook.html">教材</a></li>
           <li class="margin"> | </li>
-          <li id="n_study"><a href="">我的学习</a></li>
+          <li id="n_study"><a href="/view/student/s_study.html">我的学习</a></li>
         </ul>
       </div>
       <div class="nav-right right clearfix">
@@ -41,6 +41,7 @@
 
   </nav>
   <!-- banner -->
+  <!-- 可以摘出模版化 -->
   <section id="s_banner" class="s-banner">
     <div class="swiper-container  s-b-container">
       <div class="swiper-wrapper">
@@ -73,7 +74,7 @@
       <a href="#" class="right">more...</a>
     </div>
     <div class="s-t-content">
-    
+
     </div>
   </section>
   <footer id="s_footer" class="s-footer">
