--- a/src/view/student/s_textbook.html
+++ b/src/view/student/s_textbook.html
@@ -4,9 +4,136 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../../style/main.css">
   <title>Document</title>
 </head>
 <body>
-  教材页面
+  <header id="s_header" class="s-header">
+  </header>
+  <nav id="s_nav" class="s-nav">
+    <!-- --------- -->
+    <div class="no">
+      <div class="oh-no"></div>
+    </div>
+    <!-- --------- -->
+    <div class="nav-wrap">
+      <div class="nav-left left">
+        <ul class="nav-list">
+          <li id="n_home"><a class="xiong" href="/view/student/s_index.html">首页</a></li>
+          <li id="n_course"><a class="xiong" href="/view/student/s_course.html">课程</a></li>
+          <li id="n_textbook"><a class=color xiong href="/view/student/s_textbook.html">教材</a></li>
+          <li class="margin"> | </li>
+          <li id="n_study"><a class="xiong" href="/view/student/s_study.html">我的学习</a></li>
+        </ul>
+      </div>
+      <div class="nav-right right clearfix">
+        <ul>
+          <li><a href="#">通过课程邀请码加入课程</a></li>
+          <li class="margin"> | </li>
+          <li><a href="#">通过序列号获取资源权限</a></li>
+        </ul>
+
+      </div>
+    </div>
+
+  </nav>
+  <section id="s_c_content">
+    <p class="s_top_p">
+      <span class="s_span">首页</span><span>></span><span class="s_span">教材</span><span>></span><a
+        href="#" class="course-nav"></a>
+        <!-- <span>></span><a href="">二级分类名称</a> -->
+    </p>
+    <div class="s-c-wrap">
+      <div class="s-c-item">
+      </div>
+      <div class="s-c-content">
+        <div class="content">
+          <div class="page-top">
+            <p class="left">共个<span> 100 </span>教材</p>
+            <p class="turn right">
+              <a href=""></a>
+              <span>1</span>/10
+              <a class="turn-right"href=""></a>
+            </p>
+          </div>
+          <div class="detail">
+            <div class="images left"></div>
+            <div class="describle">
+              <h2>数学解题泄天机</h2>
+              <p>杨飞，陈荣著</p>
+              <p class="money">&yen;20.00/年</p>
+              <p>解析几何法平面解析几何法平面解析几何法平面解析几何法平平面平面解析几何法平面解析几何法平面解析几何法平面解析几何法平平面解析几何法平面解析几何法平面解析几何法平面解析几何法面解析几何法</p>
+              <p><span></span>200</p>
+            </div>
+          </div>
+          <div class="page-bottom"></div>
+          <div class="detail">
+              <div class="images left"></div>
+              <div class="describle">
+                <h2>数学解题泄天机</h2>
+                <p>杨飞，陈荣著</p>
+                <p>&yen;20.00/年</p>
+                <p>平面几何法平面解析几何法平面解析几何法平面解析几何法平平面平面解析几何法平面解析几何法平面解析几何法平面解析几何法平平面解析几何法平面解析几何法平面解析几何法平面解析几何法面解析几何法</p>
+                <p><span></span>200</p>
+              </div>
+            </div>
+            <div class="page-bottom"></div>
+            <div class="detail">
+                <div class="images left"></div>
+                <div class="describle">
+                  <h2>数学解题泄天机</h2>
+                  <p>杨飞，陈荣著</p>
+                  <p>&yen;20.00/年</p>
+                  <p>平面解何法平面解析几何法平面解析几何法平面解析几何法平平面平面解析几何法平面解析几何法平面解析几何法平面解析几何法平平面解析几何法平面解析几何法平面解析几何法平面解析几何法面解析几何法</p>
+                  <p><span></span>200</p>
+                </div>
+              </div>
+              <div class="page-bottom"></div>
+              <div class="detail">
+                  <div class="images left"></div>
+                  <div class="describle">
+                    <h2>数学解题泄天机</h2>
+                    <p>杨飞，陈荣著</p>
+                    <p>&yen;20.00/年</p>
+                    <p>平面解析法平面解析几何法平面解析几何法平面解析几何法平平面平面解析几何法平面解析几何法平面解析几何法平面解析几何法平平面解析几何法平面解析几何法平面解析几何法平面解析几何法面解析几何法</p>
+                    <p><span></span>200</p>
+                  </div>
+                </div>
+                <div class="page-bottom">
+                  <p class="total left">共<span>100</span>个教材</p>
+                  <p class="page-list right">
+                    <a href="">上一页</a>
+                    <a href="" class="page"><span> 1</span></a>
+                    <a href="" class="page"><span> 2</span></a>
+                    <a href="" class="page"><span> 3</span></a>
+                    <a href="" class="page"><span> 4</span></a>
+                    <a href="" class="page"><span> 5</span></a>
+                    <a href="" class="page"><span> 6</span></a>
+                    <a href="" class="page"><span> 7</span></a>
+                    <a href="" class="page"><span> 8</span></a>
+                    <a href="" class="page"><span> 9</span></a>
+                    <a href="" class="page"><span> 10</span></a>
+                    <span>...</span>
+                    <a href="">下一页</a>
+                    <span>共100页</span>
+                    <span>跳转</span>
+                    <label for=""><input type="text"></label><span>页</span>
+                    <input class="confirm" type="button" value="确定">
+                  </p>
+                </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <footer id="s_footer" class="s-footer">
+      <ul>
+        <li>Copyright &copy;2014-2016</li>
+        <li>哈尔滨工业大学出版社</li>
+        <li>版权所有</li>
+        <li>京IC备11017824号-7</li>
+      </ul>
+  </footer>
+  <script src="../../lib/require.js" data-main="../../js/Controller/student/s_textbook.js"></script>
 </body>
 </html>
