--- a/src/template/student/CourseCat.html
+++ b/src/template/student/CourseCat.html
@@ -3,8 +3,9 @@
     <li>
       <button class="accordion-control">{{value.name}}</button><span>+</span>
       <ul class="accordion-panel">
-        <li>中国哲学</li>
-        <li class="notone">西方哲学</li>
+        {{each value.children as value_ key_}}
+        <li class="notone">{{value_.name}}</li>
+        {{/each}}
       </ul>
     </li>
     {{/each}}
