--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -229,6 +229,11 @@
   .s-b-container{
     width: 100%;
     text-align: center;
+    div {
+      div{
+        img{
+          display: none;
+    }
   }
 }
 #s_course{
