--- a/src/template/student/CatCourseList.html
+++ b/src/template/student/CatCourseList.html
@@ -1,7 +1,7 @@
 <ul>
   {{each catCourseList as value key}}
   <li>
-    <a href="/view/student/s_course_detail.html">
+    <a href="/view/student/s_course_detail.html?id={{value.id}}">
       <img src={{value.img}} alt="">
       <p>课程名称</p>
     </a>
