--- a/src/view/student/s_course.html
+++ b/src/view/student/s_course.html
@@ -44,7 +44,7 @@
     <p class="s_top_p">
       <span class="s_span">首页</span><span>></span><span class="s_span">课程</span><span>></span><a
         href="#" class="course-nav"></a>
-        <!-- <span>></span><a href="">二级分类名称</a> -->
+        <span style="opacity: 0" class='left_span'>></span><a href=""  class="child_text"></a>
     </p>
     <div class="s-c-wrap">
       <div class="s-c-item">
@@ -67,7 +67,7 @@
               共<span class="total-module-num">100</span>个课程
             </div>
             <div class="pagination">
-              
+
             </div>
           </div>
         </div>
