--- a/src/view/student/s_course_detail.html
+++ b/src/view/student/s_course_detail.html
@@ -22,7 +22,7 @@
     <div class="nav-wrap">
       <div class="nav-left left">
         <ul>
-          <li id="n_home"><a  href="/view/student/s_home.html">首页</a></li>
+          <li id="n_home"><a href="/view/student/s_home.html">首页</a></li>
           <li id="n_course"><a class="color" href="/view/student/s_course.html">课程</a></li>
           <li id="n_textbook"><a href="/view/student/s_textbook.html">教材</a></li>
           <li class="margin"> | </li>
@@ -42,20 +42,34 @@
   </nav>
   <section class="c_detail">
     <p>首页>课程>一级分类名称</p>
-    <div class="detail_top">ccccccccccccccc</div>
+    <div class="courseDetail">
+      <!-- <div class="detail_top">
+        <p>课程名称</p>
+      </div>
 
-    <div class="c_detail_main clearfix">
-      <div class="main_article left">xxxxxxxx</div>
-      <div class="main_aside right">xxxxxx</div>
+      <div class="c_detail_main clearfix">
+        <div class="main_article left">
+          <div>课程介绍</div>
+          <div>教师介绍</div>
+          <div>课程目录</div>
+        </div>
+        <div class="main_aside right">
+          <ul>
+            <li>选用的教材</li>
+            <li>相关课程</li>
+          </ul>
+        </div>
+      </div> -->
     </div>
+
   </section>
-   <footer id="s_footer" class="s-footer">
-      <ul>
-        <li>Copyright &copy;2014-2016</li>
-        <li>哈尔滨工业大学出版社</li>
-        <li>版权所有</li>
-        <li>京IC备11017824号-7</li>
-      </ul>
+  <footer id="s_footer" class="s-footer">
+    <ul>
+      <li>Copyright &copy;2014-2016</li>
+      <li>哈尔滨工业大学出版社</li>
+      <li>版权所有</li>
+      <li>京IC备11017824号-7</li>
+    </ul>
   </footer>
   <script src="../../lib/require.js" data-main="../../../js/Controller/student/s_course_detail.js"></script>
 </body>
