--- a/src/view/student/s_index.html
+++ b/src/view/student/s_index.html
@@ -43,7 +43,7 @@
   <!-- banner -->
   <!-- 可以摘出模版化 -->
   <section id="s_banner" class="s-banner">
-    <div class="swiper-container  s-b-container">
+    <div class="swiper-container  s-b-container" id="s_swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="../../asset/image/te_banner1.png" alt=""></div>
         <div class="swiper-slide"><img src="../../asset/image/te_banner1.png" alt=""></div>
@@ -58,7 +58,7 @@
       <div class="top-left left">
         <span></span>推荐课程
       </div>
-      <a href="#" class="right">more...</a>
+      <a  class="right" href="/view/student/s_course.html?id=1">more...</a>
     </div>
     <div class="s-c-content" id="courseList">
 
