--- a/src/view/student/s_course.html
+++ b/src/view/student/s_course.html
@@ -62,7 +62,7 @@
         <div class="content_footer">
           <!-- <div class="footer_left">共<span>100</span>个课程</div>
           <div class="footer_right"> -->
-          <div class="pagination-wrap">
+          <div class="pagination-wrap" style='display: flex;justify-content: space-between; align-items: center;'>
             <div class="total-module">
               共<span class="total-module-num">100</span>个课程
             </div>
